criando, Dtos de auth e user e arquivo de segurança jwt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
 spring.application.name=avaEliel
+# ===============================
+# = BANCO DE DADOS - PostgreSQL =
+# ===============================
+spring.datasource.url=jdbc:postgresql://localhost:5433/trabalhoEliel
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# =======================
+# = JPA / HIBERNATE     =
+# =======================
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# ============================
+# = SERVER / PORTA PADRÃO    =
+# ============================
+server.port=8080
+
+# ============================
+# = LOGGING (opcional)       =
+# ============================
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
